update cc
